manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hextris-app-service
  labels:
    app: hextris-app
spec:
  selector:
    app: hextris-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
