manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hextris-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingressClassName: nginx
spec:
  rules:
  - host: hextris.tii.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hextris-app-service
            port:
              number: 80
